--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,12 +2,19 @@
 
 {% block content %}
     <article class="post">
+        {% if user.is_authenticated %}
+            <aside class="actions">
+                <a class="btn btn-secondary" href="{% url 'post_edit' pk=post.pk %}">
+                    {% include './icons/pencil-fill.svg' %}
+                </a>
+        {% endif %}    
+        </aside>  
         {% if post.published_date %} 
             <time class="date">
                 {{ post.published_date }}
             </time>
         {% endif %} 
         <h2>{{ post.title }}</h2>
-        <p>{{ post.text|linebreaksbr }}</p>    
+        <p>{{ post.text|linebreaksbr }}</p>  
     </article>
 {% endblock %}
